--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,19 +2,20 @@
     background-image: url('/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
-  
-  }
-  
-  .darumadrop-one-regular {
+    min-height: 100vh;
+}
+
+.darumadrop-one-regular {
     font-family: "Darumadrop One", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  
-  h1 {
+}
+
+
+h1 {
     color: white;
     font-family: "Darumadrop One", sans-serif;
     font-size: 50px;
-  }
+}
