--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,20 +1,19 @@
 .background {
     background-image: url('/background.jpg');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-  
-  }
-  
-  .darumadrop-one-regular {
+}
+
+.darumadrop-one-regular {
     font-family: "Darumadrop One", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  
-  h1 {
+}
+
+
+h1 {
     color: white;
     font-family: "Darumadrop One", sans-serif;
     font-size: 50px;
-  }
+}
